# ARST

./: README.md  api.py  arst.py  dashboard.html  dashboard.py  main.py  pyproject.toml  test.py  video_client.py
arst_brain/: YOLOv12Detector.py  __init__.py
rust_server/: Cargo.toml
rust_server/src/: lib.rs
