[project]
name = "arst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "langchain-ollama>=0.2.3",
    "numpy>=1.26.4",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "realtimestt>=0.3.98",
    "ultralytics>=8.3.92",
]
